--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "babel-jest": "^26.1.0",
     "morgan": "^1.10.0"
   }
 }
